objects/Program_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Acronym__c</fullName>
        <label>Acronym</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Unique_ID__c</fullName>
        <label>Hierarchy Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Program Hierarchy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Hierarchies</pluralLabel>
    <recordTypes>
        <fullName>Detail</fullName>
        <active>true</active>
        <description>Program-level records, as opposed to the manufactured hierarchy-level records.</description>
        <label>Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hierarchy</fullName>
        <active>true</active>
        <description>Hierarchy records, generated from attributes on the actual Programs.</description>
        <label>Hierarchy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
	NOT(ISNULL(End_date__c)),
	End_date__c &lt;= Start_date__c
)</errorConditionFormula>
        <errorDisplayField>Start_date__c</errorDisplayField>
        <errorMessage>The End date must be at least one day after the Start date</errorMessage>
    </validationRules>
</CustomObject>